--- a/arch/arm64/configs/asahi_defconfig
+++ b/arch/arm64/configs/asahi_defconfig
@@ -3,45 +3,25 @@ CONFIG_LOCALVERSION="-ARCH"
 CONFIG_SYSVIPC=y
 CONFIG_POSIX_MQUEUE=y
 CONFIG_WATCH_QUEUE=y
-CONFIG_NO_HZ_FULL=y
+CONFIG_NO_HZ_IDLE=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_BPF_SYSCALL=y
 CONFIG_BPF_JIT=y
+CONFIG_BPF_JIT_ALWAYS_ON=y
 # CONFIG_BPF_UNPRIV_DEFAULT_OFF is not set
 CONFIG_PREEMPT=y
-CONFIG_PREEMPT_DYNAMIC=y
-CONFIG_IRQ_TIME_ACCOUNTING=y
-CONFIG_BSD_PROCESS_ACCT=y
-CONFIG_BSD_PROCESS_ACCT_V3=y
-CONFIG_TASKSTATS=y
-CONFIG_TASK_DELAY_ACCT=y
-CONFIG_TASK_XACCT=y
-CONFIG_TASK_IO_ACCOUNTING=y
-CONFIG_PSI=y
+CONFIG_VIRT_CPU_ACCOUNTING_GEN=y
+# CONFIG_CPU_ISOLATION is not set
 CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
 CONFIG_LOG_BUF_SHIFT=18
-CONFIG_MEMCG=y
-CONFIG_BLK_CGROUP=y
-CONFIG_CFS_BANDWIDTH=y
-CONFIG_CGROUP_PIDS=y
-CONFIG_CGROUP_RDMA=y
-CONFIG_CGROUP_FREEZER=y
-CONFIG_CGROUP_HUGETLB=y
-CONFIG_CPUSETS=y
-CONFIG_CGROUP_DEVICE=y
-CONFIG_CGROUP_CPUACCT=y
-CONFIG_CGROUP_PERF=y
-CONFIG_CGROUP_BPF=y
 CONFIG_NAMESPACES=y
 CONFIG_USER_NS=y
-CONFIG_CHECKPOINT_RESTORE=y
 CONFIG_SCHED_AUTOGROUP=y
 CONFIG_RELAY=y
 CONFIG_BOOT_CONFIG=y
 CONFIG_EXPERT=y
-CONFIG_KALLSYMS_ALL=y
-CONFIG_PROFILING=y
+CONFIG_PERF_EVENTS=y
 CONFIG_ARCH_APPLE=y
 # CONFIG_ARM64_ERRATUM_826319 is not set
 # CONFIG_ARM64_ERRATUM_827319 is not set
@@ -54,12 +34,15 @@ CONFIG_ARCH_APPLE=y
 # CONFIG_ARM64_ERRATUM_1165522 is not set
 # CONFIG_ARM64_ERRATUM_1319367 is not set
 # CONFIG_ARM64_ERRATUM_1530923 is not set
+# CONFIG_ARM64_ERRATUM_2441007 is not set
 # CONFIG_ARM64_ERRATUM_1286807 is not set
 # CONFIG_ARM64_ERRATUM_1463225 is not set
 # CONFIG_ARM64_ERRATUM_1542419 is not set
 # CONFIG_ARM64_ERRATUM_1508412 is not set
 # CONFIG_ARM64_ERRATUM_2051678 is not set
 # CONFIG_ARM64_ERRATUM_2077057 is not set
+# CONFIG_ARM64_ERRATUM_2658417 is not set
+# CONFIG_ARM64_ERRATUM_2054223 is not set
 # CONFIG_ARM64_ERRATUM_2067961 is not set
 # CONFIG_ARM64_ERRATUM_2441009 is not set
 # CONFIG_ARM64_ERRATUM_2457168 is not set
@@ -80,23 +63,28 @@ CONFIG_ARM64_16K_PAGES=y
 CONFIG_ARM64_VA_BITS_48=y
 CONFIG_SCHED_MC=y
 CONFIG_SCHED_CLUSTER=y
-CONFIG_SCHED_SMT=y
-CONFIG_NR_CPUS=64
+CONFIG_NR_CPUS=8
 CONFIG_HOTPLUG_CPU=y
-CONFIG_HZ_1000=y
+CONFIG_HZ_100=y
 CONFIG_PARAVIRT_TIME_ACCOUNTING=y
 CONFIG_KEXEC_FILE=y
+# CONFIG_UNMAP_KERNEL_AT_EL0 is not set
+# CONFIG_MITIGATE_SPECTRE_BRANCH_HISTORY is not set
+# CONFIG_RODATA_FULL_DEFAULT_ENABLED is not set
+# CONFIG_ARM64_BTI is not set
+# CONFIG_ARM64_MTE is not set
+# CONFIG_ARM64_EPAN is not set
+# CONFIG_ARM64_SVE is not set
 CONFIG_ARM64_MODULE_PLTS=y
 # CONFIG_SUSPEND is not set
 CONFIG_PM=y
-CONFIG_PM_DEBUG=y
 CONFIG_ENERGY_MODEL=y
 CONFIG_CPU_IDLE=y
+CONFIG_CPU_IDLE_GOV_LADDER=y
 CONFIG_CPU_IDLE_GOV_MENU=y
 CONFIG_CPU_IDLE_GOV_TEO=y
 CONFIG_ARM_PSCI_CPUIDLE=y
 CONFIG_CPU_FREQ=y
-CONFIG_CPU_FREQ_STAT=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
@@ -105,16 +93,18 @@ CONFIG_CPUFREQ_DT=y
 CONFIG_ARM_APPLE_SOC_CPUFREQ=m
 CONFIG_VIRTUALIZATION=y
 CONFIG_KVM=y
+CONFIG_JUMP_LABEL=y
+# CONFIG_STACKPROTECTOR is not set
 CONFIG_ARCH_MMAP_RND_BITS=18
 CONFIG_COMPAT_32BIT_TIME=y
+# CONFIG_VMAP_STACK is not set
+# CONFIG_RANDOMIZE_KSTACK_OFFSET is not set
 CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_COMPRESS_ZSTD=y
+CONFIG_TRIM_UNUSED_KSYMS=y
 # CONFIG_BLOCK_LEGACY_AUTOLOAD is not set
 CONFIG_BLK_DEV_ZONED=y
-CONFIG_BLK_DEV_THROTTLING=y
-CONFIG_BLK_WBT=y
-CONFIG_BLK_CGROUP_IOPRIO=y
 CONFIG_BLK_SED_OPAL=y
 CONFIG_PARTITION_ADVANCED=y
 CONFIG_AIX_PARTITION=y
@@ -129,18 +119,16 @@ CONFIG_LDM_PARTITION=y
 CONFIG_SGI_PARTITION=y
 CONFIG_SUN_PARTITION=y
 CONFIG_KARMA_PARTITION=y
-CONFIG_IOSCHED_BFQ=y
-CONFIG_BFQ_GROUP_IOSCHED=y
+# CONFIG_MQ_IOSCHED_KYBER is not set
 CONFIG_BINFMT_MISC=y
-CONFIG_ZSWAP=y
-CONFIG_Z3FOLD=y
-CONFIG_ZSMALLOC=y
+# CONFIG_SWAP is not set
 CONFIG_SLAB_FREELIST_RANDOM=y
+CONFIG_SHUFFLE_PAGE_ALLOCATOR=y
 # CONFIG_COMPAT_BRK is not set
 CONFIG_KSM=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=32768
-CONFIG_CMA=y
-CONFIG_CMA_DEBUGFS=y
+CONFIG_TRANSPARENT_HUGEPAGE=y
+CONFIG_TRANSPARENT_HUGEPAGE_MADVISE=y
 CONFIG_NET=y
 CONFIG_PACKET=y
 CONFIG_PACKET_DIAG=m
@@ -206,7 +194,6 @@ CONFIG_IPV6_MROUTE_MULTIPLE_TABLES=y
 CONFIG_IPV6_PIMSM_V2=y
 CONFIG_IPV6_SEG6_LWTUNNEL=y
 CONFIG_IPV6_SEG6_HMAC=y
-CONFIG_NETLABEL=y
 CONFIG_MPTCP=y
 CONFIG_NETWORK_PHY_TIMESTAMPING=y
 CONFIG_NETFILTER=y
@@ -264,7 +251,6 @@ CONFIG_NFT_REJECT_NETDEV=m
 CONFIG_NF_FLOW_TABLE_INET=m
 CONFIG_NF_FLOW_TABLE=m
 CONFIG_NETFILTER_XT_SET=m
-CONFIG_NETFILTER_XT_TARGET_AUDIT=m
 CONFIG_NETFILTER_XT_TARGET_CHECKSUM=m
 CONFIG_NETFILTER_XT_TARGET_CLASSIFY=m
 CONFIG_NETFILTER_XT_TARGET_CONNMARK=m
@@ -386,7 +372,6 @@ CONFIG_IP_NF_TARGET_CLUSTERIP=m
 CONFIG_IP_NF_TARGET_ECN=m
 CONFIG_IP_NF_TARGET_TTL=m
 CONFIG_IP_NF_RAW=m
-CONFIG_IP_NF_SECURITY=m
 CONFIG_IP_NF_ARPTABLES=m
 CONFIG_IP_NF_ARPFILTER=m
 CONFIG_IP_NF_ARP_MANGLE=m
@@ -409,7 +394,6 @@ CONFIG_IP6_NF_TARGET_REJECT=m
 CONFIG_IP6_NF_TARGET_SYNPROXY=m
 CONFIG_IP6_NF_MANGLE=m
 CONFIG_IP6_NF_RAW=m
-CONFIG_IP6_NF_SECURITY=m
 CONFIG_IP6_NF_NAT=m
 CONFIG_IP6_NF_TARGET_MASQUERADE=m
 CONFIG_IP6_NF_TARGET_NPT=m
@@ -450,7 +434,6 @@ CONFIG_ATM_CLIP=m
 CONFIG_ATM_LANE=m
 CONFIG_ATM_BR2684=m
 CONFIG_L2TP=m
-CONFIG_L2TP_DEBUGFS=m
 CONFIG_L2TP_V3=y
 CONFIG_L2TP_IP=m
 CONFIG_L2TP_ETH=m
@@ -566,7 +549,6 @@ CONFIG_MPLS_ROUTING=m
 CONFIG_QRTR=m
 CONFIG_QRTR_TUN=m
 CONFIG_CGROUP_NET_PRIO=y
-CONFIG_BPF_STREAM_PARSER=y
 CONFIG_NET_PKTGEN=m
 CONFIG_HAMRADIO=y
 CONFIG_AX25=m
@@ -589,7 +571,6 @@ CONFIG_BT_HIDP=m
 CONFIG_BT_HS=y
 CONFIG_BT_6LOWPAN=m
 CONFIG_BT_MSFTEXT=y
-# CONFIG_BT_DEBUGFS is not set
 CONFIG_BT_HCIBTUSB=m
 CONFIG_BT_HCIBTSDIO=m
 CONFIG_BT_HCIUART=m
@@ -610,10 +591,10 @@ CONFIG_BT_MRVL=m
 CONFIG_BT_MRVL_SDIO=m
 CONFIG_BT_ATH3K=m
 CONFIG_CFG80211=m
-CONFIG_CFG80211_DEBUGFS=y
+CONFIG_CFG80211_WEXT=y
 CONFIG_MAC80211=m
 CONFIG_MAC80211_MESH=y
-CONFIG_MAC80211_DEBUGFS=y
+CONFIG_MAC80211_LEDS=y
 CONFIG_RFKILL=m
 CONFIG_RFKILL_INPUT=y
 CONFIG_RFKILL_GPIO=m
@@ -647,7 +628,6 @@ CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
 CONFIG_FW_LOADER_COMPRESS=y
 CONFIG_FW_LOADER_COMPRESS_ZSTD=y
-CONFIG_DEBUG_DEVRES=y
 CONFIG_CONNECTOR=y
 CONFIG_DMI_SYSFS=y
 CONFIG_EFI_VARS_PSTORE_DEFAULT_DISABLE=y
@@ -671,7 +651,6 @@ CONFIG_MTD_SPI_NOR=m
 CONFIG_MTD_SPI_NOR_SWP_KEEP=y
 CONFIG_OF_OVERLAY=y
 CONFIG_BLK_DEV_NULL_BLK=m
-CONFIG_ZRAM=m
 CONFIG_BLK_DEV_LOOP=m
 CONFIG_BLK_DEV_LOOP_MIN_COUNT=0
 CONFIG_BLK_DEV_DRBD=m
@@ -689,6 +668,7 @@ CONFIG_TIFM_CORE=y
 # CONFIG_TIFM_7XX1 is not set
 CONFIG_ENCLOSURE_SERVICES=m
 CONFIG_EEPROM_AT24=m
+CONFIG_EEPROM_93CX6=m
 CONFIG_CB710_CORE=y
 CONFIG_UACCE=m
 CONFIG_RAID_ATTRS=m
@@ -930,55 +910,26 @@ CONFIG_USB_VL600=m
 CONFIG_USB_NET_CH9200=m
 CONFIG_USB_NET_AQC111=m
 # CONFIG_WLAN_VENDOR_ADMTEK is not set
-CONFIG_ATH9K_HTC=m
-CONFIG_CARL9170=m
-CONFIG_ATH6KL=m
-CONFIG_ATH6KL_USB=m
-CONFIG_AR5523=m
-CONFIG_ATH10K=m
-CONFIG_ATH10K_USB=m
-CONFIG_ATH10K_DEBUGFS=y
-CONFIG_AT76C50X_USB=m
+# CONFIG_WLAN_VENDOR_ATH is not set
+# CONFIG_WLAN_VENDOR_ATMEL is not set
 CONFIG_BRCMFMAC=m
 # CONFIG_BRCMFMAC_SDIO is not set
 CONFIG_BRCMFMAC_USB=y
 CONFIG_BRCMFMAC_PCIE=y
-CONFIG_HERMES=m
-CONFIG_HERMES_PRISM=y
-CONFIG_ORINOCO_USB=m
-CONFIG_P54_COMMON=m
-CONFIG_P54_USB=m
-CONFIG_LIBERTAS=m
-CONFIG_LIBERTAS_USB=m
-CONFIG_LIBERTAS_MESH=y
-CONFIG_LIBERTAS_THINFIRM=m
-CONFIG_LIBERTAS_THINFIRM_USB=m
-CONFIG_MWIFIEX=m
-CONFIG_MWIFIEX_USB=m
-CONFIG_MT7601U=m
-CONFIG_MT76x0U=m
-CONFIG_MT76x2U=m
-CONFIG_MT7663U=m
+# CONFIG_WLAN_VENDOR_CISCO is not set
+# CONFIG_WLAN_VENDOR_INTEL is not set
+# CONFIG_WLAN_VENDOR_INTERSIL is not set
+# CONFIG_WLAN_VENDOR_MARVELL is not set
+# CONFIG_WLAN_VENDOR_MEDIATEK is not set
 # CONFIG_WLAN_VENDOR_MICROCHIP is not set
 # CONFIG_WLAN_VENDOR_PURELIFI is not set
-CONFIG_RT2X00=m
-CONFIG_RT2500USB=m
-CONFIG_RT73USB=m
-CONFIG_RT2800USB=m
-CONFIG_RT2800USB_RT3573=y
-CONFIG_RT2800USB_RT53XX=y
-CONFIG_RT2800USB_RT55XX=y
-CONFIG_RT2800USB_UNKNOWN=y
-CONFIG_RT2X00_LIB_DEBUGFS=y
-CONFIG_RTL8187=m
-CONFIG_RTL8192CU=m
-CONFIG_RTL8XXXU=m
-CONFIG_RSI_91X=m
-# CONFIG_RSI_SDIO is not set
+# CONFIG_WLAN_VENDOR_RALINK is not set
+# CONFIG_WLAN_VENDOR_REALTEK is not set
+# CONFIG_WLAN_VENDOR_RSI is not set
+# CONFIG_WLAN_VENDOR_SILABS is not set
 # CONFIG_WLAN_VENDOR_ST is not set
 # CONFIG_WLAN_VENDOR_TI is not set
-CONFIG_USB_ZD1201=m
-CONFIG_ZD1211RW=m
+# CONFIG_WLAN_VENDOR_ZYDAS is not set
 # CONFIG_WLAN_VENDOR_QUANTENNA is not set
 CONFIG_USB_NET_RNDIS_WLAN=m
 CONFIG_IEEE802154_FAKELB=m
@@ -1028,7 +979,6 @@ CONFIG_HW_RANDOM=y
 CONFIG_HW_RANDOM_VIRTIO=m
 # CONFIG_HW_RANDOM_ARM_SMCCC_TRNG is not set
 # CONFIG_HW_RANDOM_CN10K is not set
-# CONFIG_RANDOM_TRUST_CPU is not set
 CONFIG_I2C_CHARDEV=m
 CONFIG_I2C_MUX=y
 CONFIG_I2C_ARB_GPIO_CHALLENGE=m
@@ -1059,7 +1009,6 @@ CONFIG_THERMAL_WRITABLE_TRIPS=y
 CONFIG_THERMAL_GOV_FAIR_SHARE=y
 CONFIG_THERMAL_GOV_BANG_BANG=y
 CONFIG_THERMAL_GOV_USER_SPACE=y
-CONFIG_THERMAL_GOV_POWER_ALLOCATOR=y
 CONFIG_CPU_THERMAL=y
 CONFIG_DEVFREQ_THERMAL=y
 CONFIG_THERMAL_EMULATION=y
@@ -1742,14 +1691,12 @@ CONFIG_XFS_POSIX_ACL=y
 CONFIG_GFS2_FS=m
 CONFIG_GFS2_FS_LOCKING_DLM=y
 CONFIG_OCFS2_FS=m
-# CONFIG_OCFS2_FS_STATS is not set
 # CONFIG_OCFS2_DEBUG_MASKLOG is not set
 CONFIG_BTRFS_FS=m
 CONFIG_BTRFS_FS_POSIX_ACL=y
 CONFIG_NILFS2_FS=m
 CONFIG_FS_ENCRYPTION=y
 CONFIG_FANOTIFY=y
-CONFIG_FANOTIFY_ACCESS_PERMISSIONS=y
 CONFIG_QUOTA_NETLINK_INTERFACE=y
 # CONFIG_PRINT_QUOTA_WARNING is not set
 CONFIG_QFMT_V2=y
@@ -1797,7 +1744,6 @@ CONFIG_NFS_FS=y
 # CONFIG_NFS_V2 is not set
 CONFIG_NFS_V3_ACL=y
 CONFIG_NFS_V4=y
-CONFIG_NFS_SWAP=y
 CONFIG_NFS_V4_1=y
 CONFIG_NFS_V4_2=y
 CONFIG_NFSD=m
@@ -1807,8 +1753,6 @@ CONFIG_NFSD_BLOCKLAYOUT=y
 CONFIG_NFSD_SCSILAYOUT=y
 CONFIG_NFSD_FLEXFILELAYOUT=y
 CONFIG_NFSD_V4_2_INTER_SSC=y
-CONFIG_NFSD_V4_SECURITY_LABEL=y
-CONFIG_SUNRPC_DEBUG=y
 CONFIG_CEPH_FS=m
 CONFIG_CEPH_FSCACHE=y
 CONFIG_CEPH_FS_POSIX_ACL=y
@@ -1880,13 +1824,7 @@ CONFIG_UNICODE=m
 CONFIG_PERSISTENT_KEYRINGS=y
 CONFIG_ENCRYPTED_KEYS=y
 CONFIG_KEY_DH_OPERATIONS=y
-CONFIG_SECURITY=y
-CONFIG_SECURITY_NETWORK_XFRM=y
-CONFIG_SECURITY_APPARMOR=y
-CONFIG_SECURITY_YAMA=y
-# CONFIG_INTEGRITY is not set
-CONFIG_DEFAULT_SECURITY_DAC=y
-CONFIG_LSM="yama,loadpin,safesetid,integrity,selinux,smack,tomoyo,apparmor"
+CONFIG_LSM=""
 CONFIG_INIT_STACK_NONE=y
 CONFIG_CRYPTO_USER=m
 # CONFIG_CRYPTO_MANAGER_DISABLE_TESTS is not set
@@ -1967,24 +1905,15 @@ CONFIG_CRC8=y
 # CONFIG_XZ_DEC_POWERPC is not set
 # CONFIG_XZ_DEC_IA64 is not set
 # CONFIG_XZ_DEC_SPARC is not set
-CONFIG_DMA_CMA=y
-CONFIG_CMA_SIZE_MBYTES=64
 CONFIG_IRQ_POLL=y
 CONFIG_FONTS=y
 CONFIG_FONT_8x16=y
 CONFIG_FONT_TER16x32=y
 CONFIG_PRINTK_TIME=y
-CONFIG_BOOT_PRINTK_DELAY=y
-CONFIG_DYNAMIC_DEBUG=y
+# CONFIG_SYMBOLIC_ERRNAME is not set
+CONFIG_FRAME_WARN=0
 CONFIG_STRIP_ASM_SYMS=y
-CONFIG_MAGIC_SYSRQ_DEFAULT_ENABLE=0x0
-CONFIG_KGDB=y
-CONFIG_KGDB_TESTS=y
-CONFIG_DEBUG_WX=y
-CONFIG_SOFTLOCKUP_DETECTOR=y
-CONFIG_SCHEDSTATS=y
-CONFIG_RCU_TORTURE_TEST=m
+# CONFIG_FRAME_POINTER is not set
+# CONFIG_SLUB_DEBUG is not set
 CONFIG_RCU_CPU_STALL_TIMEOUT=60
-# CONFIG_RCU_TRACE is not set
-# CONFIG_FTRACE is not set
 # CONFIG_RUNTIME_TESTING_MENU is not set
