--- a/arch/x86/configs/archlinux_defconfig
+++ b/arch/x86/configs/archlinux_defconfig
@@ -23,18 +23,20 @@ CONFIG_BLK_DEV_INITRD=y
 # CONFIG_RD_XZ is not set
 # CONFIG_RD_LZO is not set
 # CONFIG_RD_ZSTD is not set
+CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE_O3=y
 CONFIG_EXPERT=y
 CONFIG_SMP=y
 CONFIG_X86_X2APIC=y
 CONFIG_X86_CPU_RESCTRL=y
 # CONFIG_X86_EXTENDED_PLATFORM is not set
 CONFIG_X86_INTEL_LPSS=y
+CONFIG_MSKYLAKE=y
 CONFIG_PROCESSOR_SELECT=y
 # CONFIG_CPU_SUP_AMD is not set
 # CONFIG_CPU_SUP_HYGON is not set
 # CONFIG_CPU_SUP_CENTAUR is not set
 # CONFIG_CPU_SUP_ZHAOXIN is not set
-CONFIG_NR_CPUS=16
+CONFIG_NR_CPUS=8
 # CONFIG_SCHED_CLUSTER is not set
 # CONFIG_SCHED_MC_PRIO is not set
 CONFIG_X86_REROUTE_FOR_BROKEN_BOOT_IRQS=y
@@ -70,7 +72,6 @@ CONFIG_ACPI_TAD=m
 CONFIG_ACPI_DOCK=y
 CONFIG_ACPI_IPMI=m
 CONFIG_ACPI_PROCESSOR_AGGREGATOR=m
-CONFIG_ACPI_DEBUG=y
 CONFIG_ACPI_PCI_SLOT=y
 CONFIG_ACPI_SBS=m
 CONFIG_ACPI_BGRT=y
@@ -109,6 +110,8 @@ CONFIG_KVM_INTEL=m
 CONFIG_KVM_AMD=m
 CONFIG_KVM_XEN=y
 CONFIG_JUMP_LABEL=y
+# CONFIG_STACKPROTECTOR is not set
+CONFIG_LTO_CLANG_FULL=y
 # CONFIG_VMAP_STACK is not set
 # CONFIG_RANDOMIZE_KSTACK_OFFSET is not set
 CONFIG_MODULES=y
@@ -131,12 +134,6 @@ CONFIG_LDM_PARTITION=y
 CONFIG_KARMA_PARTITION=y
 # CONFIG_MQ_IOSCHED_KYBER is not set
 CONFIG_BINFMT_MISC=y
-CONFIG_ZSWAP=y
-CONFIG_ZSWAP_DEFAULT_ON=y
-CONFIG_ZSWAP_COMPRESSOR_DEFAULT_LZ4=y
-CONFIG_ZSWAP_ZPOOL_DEFAULT_Z3FOLD=y
-CONFIG_ZBUD=y
-CONFIG_ZSMALLOC=y
 CONFIG_SHUFFLE_PAGE_ALLOCATOR=y
 # CONFIG_COMPAT_BRK is not set
 CONFIG_DEFAULT_MMAP_MIN_ADDR=65536
@@ -145,6 +142,8 @@ CONFIG_TRANSPARENT_HUGEPAGE_MADVISE=y
 CONFIG_READ_ONLY_THP_FOR_FS=y
 # CONFIG_VM_EVENT_COUNTERS is not set
 CONFIG_USERFAULTFD=y
+CONFIG_LRU_GEN=y
+CONFIG_LRU_GEN_ENABLED=y
 CONFIG_NET=y
 CONFIG_PACKET=y
 CONFIG_PACKET_DIAG=m
@@ -812,8 +811,8 @@ CONFIG_PARPORT_1284=y
 CONFIG_BLK_DEV_NULL_BLK=m
 CONFIG_BLK_DEV_FD=m
 CONFIG_BLK_DEV_PCIESSD_MTIP32XX=m
-CONFIG_ZRAM=m
-CONFIG_ZRAM_WRITEBACK=y
+CONFIG_ZRAM=y
+CONFIG_ZRAM_DEF_COMP_LZ4=y
 CONFIG_BLK_DEV_LOOP=m
 CONFIG_BLK_DEV_LOOP_MIN_COUNT=0
 CONFIG_BLK_DEV_DRBD=m
@@ -1051,7 +1050,6 @@ CONFIG_MD_CLUSTER=m
 CONFIG_BCACHE=m
 CONFIG_BCACHE_ASYNC_REGISTRATION=y
 CONFIG_BLK_DEV_DM=m
-CONFIG_DM_DEBUG=y
 CONFIG_DM_DEBUG_BLOCK_MANAGER_LOCKING=y
 CONFIG_DM_UNSTRIPED=m
 CONFIG_DM_CRYPT=m
@@ -2483,7 +2481,6 @@ CONFIG_SENSORS_WM8350=m
 CONFIG_SENSORS_INTEL_M10_BMC_HWMON=m
 CONFIG_SENSORS_ACPI_POWER=m
 CONFIG_SENSORS_ATK0110=m
-CONFIG_SENSORS_ASUS_WMI=m
 CONFIG_SENSORS_ASUS_EC=m
 CONFIG_THERMAL_EMERGENCY_POWEROFF_DELAY_MS=100
 CONFIG_THERMAL_GOV_FAIR_SHARE=y
@@ -3091,34 +3088,10 @@ CONFIG_DRM=y
 CONFIG_DRM_LOAD_EDID_FIRMWARE=y
 CONFIG_DRM_DP_AUX_CHARDEV=y
 CONFIG_DRM_DP_CEC=y
-CONFIG_DRM_I2C_NXP_TDA998X=m
-CONFIG_DRM_I2C_NXP_TDA9950=m
-CONFIG_DRM_RADEON=m
-CONFIG_DRM_RADEON_USERPTR=y
-CONFIG_DRM_AMDGPU=m
-CONFIG_DRM_AMDGPU_SI=y
-CONFIG_DRM_AMDGPU_CIK=y
-CONFIG_DRM_AMD_ACP=y
-CONFIG_DRM_AMD_DC_HDCP=y
-CONFIG_DRM_AMD_DC_SI=y
-CONFIG_HSA_AMD=y
-CONFIG_DRM_NOUVEAU=m
-# CONFIG_NOUVEAU_LEGACY_CTX_SUPPORT is not set
 CONFIG_DRM_I915=m
 CONFIG_DRM_I915_FORCE_PROBE="*"
 CONFIG_DRM_I915_GVT_KVMGT=m
 CONFIG_DRM_I915_PXP=y
-CONFIG_DRM_VGEM=m
-CONFIG_DRM_VKMS=m
-CONFIG_DRM_VMWGFX=m
-CONFIG_DRM_VMWGFX_FBCON=y
-CONFIG_DRM_VMWGFX_MKSSTATS=y
-CONFIG_DRM_GMA500=m
-CONFIG_DRM_UDL=m
-CONFIG_DRM_AST=m
-CONFIG_DRM_MGAG200=m
-CONFIG_DRM_QXL=m
-CONFIG_DRM_VIRTIO_GPU=m
 CONFIG_DRM_PANEL_RASPBERRYPI_TOUCHSCREEN=m
 CONFIG_DRM_PANEL_WIDECHIPS_WS2401=m
 CONFIG_DRM_ANALOGIX_ANX78XX=m
@@ -4290,41 +4263,28 @@ CONFIG_KS7010=m
 CONFIG_PI433=m
 CONFIG_FIELDBUS_DEV=m
 CONFIG_QLGE=m
-CONFIG_HUAWEI_WMI=m
-CONFIG_PEAQ_WMI=m
-CONFIG_NVIDIA_WMI_EC_BACKLIGHT=m
-CONFIG_XIAOMI_WMI=m
-CONFIG_GIGABYTE_WMI=m
-CONFIG_YOGABOOK_WMI=m
 CONFIG_ACERHDF=m
 CONFIG_ACER_WIRELESS=m
-CONFIG_ACER_WMI=m
 CONFIG_AMD_PMC=m
 CONFIG_ADV_SWBUTTON=m
 CONFIG_APPLE_GMUX=m
 CONFIG_ASUS_LAPTOP=m
 CONFIG_ASUS_WIRELESS=m
-CONFIG_ASUS_WMI=m
-CONFIG_ASUS_NB_WMI=m
 CONFIG_ASUS_TF103C_DOCK=m
 CONFIG_MERAKI_MX100=m
 CONFIG_EEEPC_LAPTOP=m
-CONFIG_EEEPC_WMI=m
 CONFIG_X86_PLATFORM_DRIVERS_DELL=y
 # CONFIG_DELL_RBU is not set
-CONFIG_DELL_WMI_PRIVACY=y
 CONFIG_AMILO_RFKILL=m
 CONFIG_FUJITSU_LAPTOP=m
 CONFIG_FUJITSU_TABLET=m
 CONFIG_GPD_POCKET_FAN=m
 CONFIG_HP_ACCEL=m
 CONFIG_WIRELESS_HOTKEY=m
-CONFIG_HP_WMI=m
 CONFIG_IBM_RTL=m
 CONFIG_IDEAPAD_LAPTOP=m
 CONFIG_SENSORS_HDAPS=m
 CONFIG_THINKPAD_ACPI=m
-CONFIG_THINKPAD_LMI=m
 CONFIG_INTEL_ATOMISP2_LED=m
 CONFIG_INTEL_SAR_INT1092=m
 CONFIG_INTEL_SKL_INT3472=m
@@ -4333,8 +4293,6 @@ CONFIG_INTEL_PMT_TELEMETRY=m
 CONFIG_INTEL_PMT_CRASHLOG=m
 CONFIG_INTEL_SPEED_SELECT_INTERFACE=m
 CONFIG_INTEL_TELEMETRY=m
-CONFIG_INTEL_WMI_SBL_FW_UPDATE=m
-CONFIG_INTEL_WMI_THUNDERBOLT=m
 CONFIG_INTEL_UNCORE_FREQ_CONTROL=m
 CONFIG_INTEL_HID_EVENT=m
 CONFIG_INTEL_VBTN=m
@@ -4351,18 +4309,14 @@ CONFIG_INTEL_SDSI=m
 CONFIG_INTEL_SMARTCONNECT=m
 CONFIG_INTEL_VSEC=m
 CONFIG_MSI_LAPTOP=m
-CONFIG_MSI_WMI=m
 CONFIG_PCENGINES_APU2=m
 CONFIG_BARCO_P50_GPIO=m
 CONFIG_SAMSUNG_LAPTOP=m
 CONFIG_SAMSUNG_Q10=m
-CONFIG_ACPI_TOSHIBA=m
 CONFIG_TOSHIBA_BT_RFKILL=m
 CONFIG_TOSHIBA_HAPS=m
-CONFIG_TOSHIBA_WMI=m
 CONFIG_ACPI_CMPC=m
 CONFIG_COMPAL_LAPTOP=m
-CONFIG_LG_LAPTOP=m
 CONFIG_PANASONIC_LAPTOP=m
 CONFIG_SONY_LAPTOP=m
 CONFIG_SONYPI_COMPAT=y
@@ -4399,7 +4353,6 @@ CONFIG_MLXREG_HOTPLUG=m
 CONFIG_MLXREG_IO=m
 CONFIG_MLXREG_LC=m
 CONFIG_NVSW_SN2201=m
-CONFIG_SURFACE3_WMI=m
 CONFIG_SURFACE_3_POWER_OPREGION=m
 CONFIG_SURFACE_ACPI_NOTIFY=m
 CONFIG_SURFACE_AGGREGATOR_CDEV=m
@@ -4934,10 +4887,9 @@ CONFIG_OCFS2_FS=m
 CONFIG_BTRFS_FS=m
 CONFIG_BTRFS_FS_POSIX_ACL=y
 CONFIG_NILFS2_FS=m
-CONFIG_F2FS_FS=m
+CONFIG_F2FS_FS=y
 CONFIG_F2FS_FS_SECURITY=y
-CONFIG_F2FS_CHECK_FS=y
-CONFIG_F2FS_FS_COMPRESSION=y
+# CONFIG_F2FS_IOSTAT is not set
 CONFIG_ZONEFS_FS=m
 CONFIG_FS_ENCRYPTION=y
 CONFIG_FS_ENCRYPTION_INLINE_CRYPT=y
@@ -4994,29 +4946,17 @@ CONFIG_UBIFS_ATIME_SUPPORT=y
 CONFIG_UBIFS_FS_AUTHENTICATION=y
 CONFIG_CRAMFS=m
 CONFIG_CRAMFS_MTD=y
-CONFIG_SQUASHFS=m
-CONFIG_SQUASHFS_FILE_DIRECT=y
-CONFIG_SQUASHFS_DECOMP_MULTI_PERCPU=y
-CONFIG_SQUASHFS_XATTR=y
-CONFIG_SQUASHFS_LZ4=y
-CONFIG_SQUASHFS_LZO=y
-CONFIG_SQUASHFS_XZ=y
-CONFIG_SQUASHFS_ZSTD=y
 CONFIG_MINIX_FS=m
 CONFIG_OMFS_FS=m
 CONFIG_ROMFS_FS=m
 CONFIG_PSTORE_DEFLATE_COMPRESS=m
 CONFIG_PSTORE_LZO_COMPRESS=m
 CONFIG_PSTORE_LZ4_COMPRESS=m
-CONFIG_PSTORE_LZ4HC_COMPRESS=m
 CONFIG_PSTORE_ZSTD_COMPRESS=y
 CONFIG_PSTORE_ZSTD_COMPRESS_DEFAULT=y
 CONFIG_PSTORE_RAM=m
 CONFIG_PSTORE_BLK=m
 CONFIG_UFS_FS=m
-CONFIG_EROFS_FS=m
-CONFIG_EROFS_FS_ZIP_LZMA=y
-CONFIG_EROFS_FS_ONDEMAND=y
 CONFIG_VBOXSF_FS=m
 CONFIG_NFS_FS=m
 CONFIG_NFS_V3_ACL=y
@@ -5113,7 +5053,6 @@ CONFIG_TRUSTED_KEYS=m
 CONFIG_ENCRYPTED_KEYS=m
 CONFIG_KEY_DH_OPERATIONS=y
 CONFIG_KEY_NOTIFICATIONS=y
-CONFIG_HARDENED_USERCOPY=y
 CONFIG_FORTIFY_SOURCE=y
 CONFIG_LSM=""
 CONFIG_INIT_STACK_NONE=y
@@ -5164,6 +5103,7 @@ CONFIG_CRYPTO_SM4_AESNI_AVX2_X86_64=m
 CONFIG_CRYPTO_TWOFISH=m
 CONFIG_CRYPTO_TWOFISH_AVX_X86_64=m
 CONFIG_CRYPTO_842=m
+CONFIG_CRYPTO_LZ4=y
 CONFIG_CRYPTO_ANSI_CPRNG=m
 CONFIG_CRYPTO_DRBG_HASH=y
 CONFIG_CRYPTO_DRBG_CTR=y
@@ -5216,4 +5156,5 @@ CONFIG_IO_STRICT_DEVMEM=y
 # CONFIG_X86_VERBOSE_BOOTUP is not set
 # CONFIG_EARLY_PRINTK is not set
 CONFIG_IO_DELAY_NONE=y
+CONFIG_UNWINDER_GUESS=y
 # CONFIG_RUNTIME_TESTING_MENU is not set
