--- a/arch/arm64/configs/asahi_defconfig
+++ b/arch/arm64/configs/asahi_defconfig
@@ -94,6 +94,7 @@ CONFIG_VIRTUALIZATION=y
 CONFIG_KVM=y
 CONFIG_JUMP_LABEL=y
 # CONFIG_STACKPROTECTOR is not set
+CONFIG_LTO_CLANG_FULL=y
 CONFIG_ARCH_MMAP_RND_BITS=18
 CONFIG_COMPAT_32BIT_TIME=y
 # CONFIG_VMAP_STACK is not set
